# QCefWidget

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  README_ch.md  TODO.md  code-structure.vsdx  config.cmake
.github/: FUNDING.yml
cmake/: cef_74.1.19.cmake
dep/: README.md
dep/cef_binary_74.1.19+gb62bacf+chromium-74.0.3729.157_windows32/: README.txt
dep/cef_binary_74.1.19+gb62bacf+chromium-74.0.3729.157_windows32/Debug/: cef_sandbox.lib
dep/cef_binary_74.1.19+gb62bacf+chromium-74.0.3729.157_windows32/Release/: cef_sandbox.lib  libcef.lib
dep/cef_binary_74.1.19+gb62bacf+chromium-74.0.3729.157_windows32/Resources/: cef.pak  cef_100_percent.pak  cef_200_percent.pak  cef_extensions.pak
dep/cef_binary_74.1.19+gb62bacf+chromium-74.0.3729.157_windows32/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
dep/cef_binary_74.1.19+gb62bacf+chromium-74.0.3729.157_windows32/libcef_dll/: CMakeLists.txt
deploy/: deploy_debug.bat  deploy_release.bat
include/QWebView/: Core.h  Creator.h  Manager.h
samples/: CMakeLists.txt
samples/asserts/: pdf.html  test.cef.html  test.html  test.swf  tree.html
samples/asserts/css/: style.css
samples/asserts/js/: digital-clock.js
samples/comprehensive/: BrowserListItem.cpp  BrowserListItem.h  BuiltInUrl.cpp  BuiltInUrl.h  CMakeLists.txt  ControlPanel.qss  Resource.rc  Sample.qrc  SampleWnd.cpp  SampleWnd.h  WebViewWnd.cpp  WebViewWnd.h  WebViewWndBase.hpp  main.cpp
samples/double_cef/: CMakeLists.txt  SampleWnd.cpp  SampleWnd.h  main.cpp
samples/double_webview2/: CMakeLists.txt  Resource.rc  SampleWnd.cpp  SampleWnd.h  resource.h
samples/dynamic_engine/: CMakeLists.txt  Resource.rc  SampleWnd.cpp  SampleWnd.h  main.cpp  resource.h
samples/single_cef/: CMakeLists.txt  SampleWnd.cpp  SampleWnd.h
samples/single_webview2/: CMakeLists.txt  Resource.rc  SampleWnd.cpp  main.cpp
src/: CMakeLists.txt  version.h.in
src/3rd/Microsoft.Web.WebView2.1.0.2651.64/: .signature.p7s  WebView2.idl  WebView2.tlb
src/3rd/Microsoft.Web.WebView2.1.0.2651.64/lib/: Microsoft.Web.WebView2.Core.winmd
src/3rd/Microsoft.Web.WebView2.1.0.2651.64/lib/net462/: Microsoft.Web.WebView2.Core.xml  Microsoft.Web.WebView2.Wpf.xml
src/3rd/Microsoft.Web.WebView2.1.0.2651.64/tools/wv2winrt/: winrt_winmd.winmd
src/3rd/Microsoft.Windows.ImplementationLibrary.1.0.240803.1/: .signature.p7s  Microsoft.Windows.ImplementationLibrary.1.0.240803.1.nupkg
src/3rd/Microsoft.Windows.ImplementationLibrary.1.0.240803.1/include/wil/: cppwinrt_notifiable_module_lock.h
src/QCefProto/: QCefProtocol.h
src/QCefWidget/: CMakeLists.txt  CefGlobalSetting.cpp  CefGlobalSetting.h  CefManager.cpp  CefManager.h  IMEHandlerWin.cpp  IMEHandlerWin.h  QCefBrowserSetting.cpp  QCefBrowserSetting.h  QCefDevToolsWnd.cpp  QCefDevToolsWnd.h  QCefEvent.cpp  QCefGlobalSetting.cpp  QCefGlobalSetting.h  QCefIMEHandlerWin.cpp  QCefIMEHandlerWin.h  QCefInitializer.cpp  QCefManager.cpp  QCefManager.h  QCefOpenGLWidget.cpp  QCefQuery.cpp  QCefResourceUtil.cpp  QCefResourceUtil.h  QCefSetting.cpp  QCefWidget.cpp  QCefWidget.rc  QCefWidgetImpl.cpp  QCefWidgetImpl.h  QCefWidgetImplement.cpp  QCefWidgetImplement.h  QCefWidgetUIEventHandlerWin.cpp  QCefWidgetUIEventHandlerWin.h  UIEventHandlerWin.cpp  UIEventHandlerWin.h  Win32DpiHelper.cpp  Win32DpiHelper.h
src/QCefWidget/CefBrowserApp/: CefBrowserApp.cpp  CefBrowserApp.h  CefBrowserHandler.cpp  CefBrowserHandler.h  CefQueryHandler.cpp  CefQueryHandler.h  QCefBrowserApp.cpp  QCefBrowserApp.h  QCefBrowserHandler.cpp  QCefBrowserHandler.h  QCefQueryHandler.cpp  QCefQueryHandler.h  QCefRequestContextHandler.cpp  QCefRequestContextHandler.h
src/QCefWidget/Include/: QCefEvent.h  QCefExport.h  QCefInitializer.h  QCefOpenGLWidget.h  QCefQuery.h  QCefResourceProvider.h  QCefSetting.h  QCefUserDefined.h.in  QCefVersion.h  QCefVersion.h.in  QCefWidget.h
src/QCefWing/: .clang-format  CMakeLists.txt  QCefWing.cpp  QCefWing.manifest  QCefWing.rc  resource.h
src/QCefWing/CefRenderApp/: QCefRenderApp.cpp  QCefRenderApp.h
src/QCefWing/CefRenderApp/RenderDelegates/: QCefClient.cpp  QCefClient.h  QCefDefaultRenderDelegate.cpp  QCefDefaultRenderDelegate.h
src/cef/: CMakeLists.txt  main_message_loop_qt.cpp  main_message_loop_qt.h  qwebview.cef.cpp  qwebview.cef.h  qwebview.cef.win.cpp  resource.rc  root_window_create.cpp  root_window_qt.cpp  root_window_qt.h  v8_handler_impl.cpp  v8_handler_impl.h
src/core/: CMakeLists.txt  core.cpp  resource.rc
src/manager/: CMakeLists.txt  manager.cpp  resource.rc  top_level_window_util.cpp  top_level_window_util.h
src/webview2/: AudioComponent.cpp  AudioComponent.h  CMakeLists.txt  CheckFailure.cpp  CheckFailure.h  ComponentBase.h  ControlComponent.cpp  ControlComponent.h  CookieManagementComponent.cpp  CookieManagementComponent.h  DCompTargetImpl.cpp  DCompTargetImpl.h  DpiUtil.cpp  DpiUtil.h  DropTarget.cpp  DropTarget.h  HostObjectComponent.cpp  HostObjectComponent.h  HostObjectSimple.idl  HostObjectSimpleImpl.cpp  HostObjectSimpleImpl.h  HostObjectSimple_h.h  HostObjectSimple_i.c  NonClientRegionSupportComponent.cpp  NonClientRegionSupportComponent.h  ProcessComponent.cpp  ProcessComponent.h  QWebView2Options.h  QWebViewWebView2Impl.cpp  QWebViewWebView2Impl.h  ScriptComponent.cpp  ScriptComponent.h  SettingsComponent.cpp  SettingsComponent.h  ViewComponent.cpp  ViewComponent.h  qwebview.webview2.cpp  qwebview.webview2.h  resource.rc  stdafx.h
test/QCefWidgetTest/: .clang-format  BrowserListItem.cpp  BrowserListItem.h  BuiltInUrl.cpp  BuiltInUrl.h  CMakeLists.txt  CefViewTestWnd.cpp  CefViewTestWnd.h  CefWnd.cpp  CefWnd.h  CefWndBase.hpp  ControlPanel.qss  DashboardWidget.cpp  DashboardWidget.h  FramelessCEF.cpp  FramelessCEF.h  FramelessWindow.hpp  LayoutHelper.hpp  QCefWidgetTest.qrc  QCefWidgetTest.qss  Resource.rc  SourceCodeWidget.cpp  SourceCodeWidget.h  TestPage.html  TestWnd.cpp  TestWnd.h  TransparentCefWnd.cpp  TransparentCefWnd.h  main.cpp  resource.h
test/TestResource/: Clock.html  FlashPlayerTest.html  TestPage.html  test.html
(+69 files in other folders)
